# django_qrcodes

./: .gitignore  MANIFEST.in  Pipfile  README.md  requirements.txt  setup.cfg  setup.py
django_qrcodes/: __init__.py  admin.py  apps.py  models.py  version.py
django_qrcodes/migrations/: 0001_initial.py
example/: admin.py  models.py  settings.py  urls.py
example/migrations/: 0001_initial.py
tests/: settings.py  tests.py
